Fix button alignment

--- a/_sass/_patterns.scss
+++ b/_sass/_patterns.scss
@@ -1189,7 +1189,8 @@
 }
 
 .content-slide-prev,
-.content-slide-next {
+.content-slide-next,
+.content-slide-restart {
   margin-bottom: .5em;
 }
 
